--- a/html/header.pug
+++ b/html/header.pug
@@ -7,7 +7,7 @@ mixin custom-select(name)
     div(class="header__select-header")
       span(class="header__select-current")=name
       div(class="header__select-icon")
-        img(class="header__select-icon-img" src='../media/svg/Select-icon.svg' alt="")
+        img(class="header__select-icon-img" src=require('media/svg/Select-icon.svg') alt="")
     div(class="header__select-body")
       +select-item('Post Header')
       +select-item('Post Layout')
@@ -19,7 +19,7 @@ header(class="header")
   div(class="header__top")
     div(class="header__burger")
       span(class="header__burger-menu")
-    img(class="header__logo" src='../media/svg/Logotype.svg' alt="")
+    img(class="header__logo" src=require('media/svg/Logotype.svg') alt="")
     div(class="header__top_right")
       input(class="header__text-field" type="text" placeholder="Поиск")
       button(class="header__search")
