--- a/html/main.pug
+++ b/html/main.pug
@@ -11,12 +11,12 @@ mixin topic-card(type, topic, image)
         div(class="main__card-description") Structured gripped tape invisible moulded cups for suppor firm hold strong powermesh front liner sport detail. Warmth comfort hangs loosely from the body large pocket at the front full button...
 main
     div(class="main")
-       +topic-card("Street", "Man in the street", "../media/png/1.png")
-       +topic-card("Style", "Minimalism", "../media/png/2.png")
-       +topic-card("Urban environment", "Urban photography", "../media/png/3.png")
-       +topic-card("Cafe", "Alcohol", "../media/png/4.png")
-       +topic-card("Party", "Holiday with friends", "../media/png/5.png")
-       +topic-card("Contrast", "Contrast in a photo shoot", "../media/png/6.png")
-       +topic-card("Meeting", "Meeting with colleagues", "../media/png/7.png")
-       +topic-card("Embankment", "Beach with pier", "../media/png/8.png")
-       +topic-card("Performances at the club", "New emotions", "../media/png/9.png")
+       +topic-card("Street", "Man in the street", require("media/png/1.png"))
+       +topic-card("Style", "Minimalism", require("media/png/2.png"))
+       +topic-card("Urban environment", "Urban photography", require("media/png/3.png"))
+       +topic-card("Cafe", "Alcohol", require("media/png/4.png"))
+       +topic-card("Party", "Holiday with friends", require("media/png/5.png"))
+       +topic-card("Contrast", "Contrast in a photo shoot", require("media/png/6.png"))
+       +topic-card("Meeting", "Meeting with colleagues", require("media/png/7.png"))
+       +topic-card("Embankment", "Beach with pier", require("media/png/8.png"))
+       +topic-card("Performances at the club", "New emotions", require("media/png/9.png"))
