--- a/html/head.pug
+++ b/html/head.pug
@@ -2,6 +2,6 @@ head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible" content="ie=edge")
-    link(rel="stylesheet", href="../css/style.css")
+    link(rel="stylesheet", href=require("css/style.css"))
     title Блог на Pug
-    script(type="module", src="index.js") 
+    script(type="module", src=require("index.js")) 
